--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 fastapi==0.111.0
 uvicorn[standard]==0.30.1
+python-multipart==0.0.9
 faster-whisper==1.0.3
-av==12.3.0
+ctranslate2==4.6.0
+numpy==1.26.4
